<resources>
    <string name="app_name">StressManagement</string>
    <string name="title">STRESSGO</string>
    <string name="title2">A JOURNEY FOR A HAPPY LIFE</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="_01_do_you_usually_get_enough_good_quality_sleep">01. Do you usually get enough good quality sleep?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_02_do_you_exercise_regularly">02. Do you exercise regularly?</string>
    <string name="yes1">Yes</string>
    <string name="no1">No</string>
    <string name="_03_do_you_manage_stress_effectively">03. Do you manage stress effectively?</string>
    <string name="yes2">Yes</string>
    <string name="no2">No</string>
    <string name="_04_do_you_maintain_a_healthy_diet">04. Do you maintain a healthy diet?</string>
    <string name="yes3">Yes</string>
    <string name="no3">No</string>
    <string name="_05_do_you_take_time_to_relax_and_unwind">05. Do you take time to relax and unwind?</string>
    <string name="yes22">Yes</string>
    <string name="no22">No</string>
    <string name="submit">Submit</string>
    <string name="aromas_for_mind_relaxation">Aromas for Mind Relaxation</string>
    <string name="_1_lavender_neffects_reduces_stress_anxiety_and_promotes_deep_sleep_nideal_for_meditation_bedtime_and_relaxation_nused_in_diffusers_bath_oils_pillow_sprays_n_n">1. Lavender 🌸\nEffects: Reduces stress, anxiety, and promotes deep sleep.\nIdeal for: Meditation, bedtime, and relaxation.\nUsed in: Diffusers, bath oils, pillow sprays.\n\n</string>
    <string name="_2_chamomile_neffects_calms_the_mind_reduces_nervous_tension_and_improves_mood_n_ideal_for_anxiety_relief_stress_management_and_relaxation_n_also_used_in_chamomile_tea_for_relaxation_n_n">2. Chamomile 🌼\nEffects: Calms the mind, reduces nervous tension, and improves mood.\n✅ Ideal for: Anxiety relief, stress management, and relaxation.\n☕ Also used in chamomile tea for relaxation.\n\n</string>
    <string name="_3_sandalwood_neffects_helps_in_deep_meditation_reduces_restlessness_and_enhances_focus_nideal_for_yoga_prayer_and_deep_relaxation_noften_used_in_incense_sticks_and_essential_oils_n_n">3. Sandalwood 🌳\nEffects: Helps in deep meditation, reduces restlessness, and enhances focus.\nIdeal for: Yoga, prayer, and deep relaxation.\nOften used in incense sticks and essential oils.\n\n</string>
    <string name="_4_rose_neffects_uplifts_mood_reduces_depression_and_creates_a_calming_effect_nideal_for_stress_relief_self_care_and_emotional_healing_nused_in_perfumes_diffusers_and_bath_products_n_n">4. Rose 🌹\nEffects: Uplifts mood, reduces depression, and creates a calming effect.\nIdeal for: Stress relief, self-care, and emotional healing.\nUsed in perfumes, diffusers, and bath products.\n\n</string>
    <string name="_5_jasmine_neffects_relieves_tension_promotes_relaxation_and_helps_with_sleep_nideal_for_evening_relaxation_and_romance_nused_in_essential_oils_and_room_fresheners_n_n">5. Jasmine 🌺\nEffects: Relieves tension, promotes relaxation, and helps with sleep.\nIdeal for: Evening relaxation and romance.\nUsed in essential oils and room fresheners.\n\n</string>
    <string name="_6_ylang_ylang_neffects_lowers_blood_pressure_reduces_anxiety_and_enhances_mood_nideal_for_deep_relaxation_and_meditation_noften_blended_with_other_oils_for_a_calming_effect">6. Ylang-Ylang 🌼\nEffects: Lowers blood pressure, reduces anxiety, and enhances mood.\nIdeal for: Deep relaxation and meditation.\nOften blended with other oils for a calming effect.</string>
    <string name="welcome_to_stressgo">Welcome To STRESSGO!</string>
    <string name="welcome_to_stressgo1">Welcome To STRESSGO!</string>
    <string name="welcome_to_stressgo5">Welcome To STRESSGO</string>
    <string name="meditation_library">Meditation Library</string>
    <string name="calm_music_ntherapy">Calm Music\nTherapy</string>
    <string name="breathing_exercises">Breathing Exercises</string>
    <string name="dietary_plans">Dietary plans</string>
    <string name="yoga_library">Yoga Library</string>
    <string name="aroma_therapy">Aroma Therapy</string>
    <string name="start">START</string>
    <string name="relaxation_and_anxiety_relief">Relaxation and Anxiety Relief</string>
    <string name="sleep_meditation">Sleep Meditation</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="step_11">Step 1</string>
    <string name="step_41">Step 4</string>
    <string name="step_5">Step 5</string>
    <string name="step_22">Step 2</string>
    <string name="step_51">Step 5</string>
    <string name="step_6">Step 6</string>
    <string name="step_31">Step 3</string>
    <string name="_12_53">12.53</string>
    <string name="you_may_need_an_expert_on_last_month_report">You may need an expert on last month report.</string>
    <string name="_11_16">11.16</string>
    <string name="ready_for_a_new_start_click_link_to_see_what_s_new">Ready for a new start. Click link to see what’s new !!</string>
    <string name="_10_25">10.25</string>
    <string name="sleep_is_your_superpower_track_your_sleep_quality_now">Sleep is your superpower! 😴 Track your sleep quality now.</string>
    <string name="it_s_time_for_your_daily_self_care_check_in">It’s time for your daily self-care check-in! 🤔</string>
    <string name="_09_18">09.18</string>
    <string name="your_monthly_stress_report_is_ready">Your monthly Stress report is ready.</string>
    <string name="_16_32">16.32</string>
    <string name="_19_25">19.25</string>
    <string name="and_also_personalized_stress_management_plans">And also Personalized Stress Management Plans...</string>
    <string name="we_provide_you_guided_relaxation_techniques">We provide you Guided Relaxation Techniques...</string>
    <string name="danuka_barnett">Danuka Barnett</string>
    <string name="danukbarnett_gmail_com">danukbarnett@gmail.com</string>
    <string name="email_danukbarnett_gmail_com">Email - danukbarnett@gmail.com</string>
    <string name="username_danuka">Username - Danuka</string>
    <string name="country_sri_lanka">Country - Sri Lanka</string>
    <string name="about_i_am_a_nice_person">About - I am a nice person</string>
    <string name="update">Update</string>
    <string name="register_here">Register here...</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_username">Enter username</string>

</resources>