<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/grey">

        <!-- CardView 1 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="42dp"
            android:layout_marginTop="42dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_01_do_you_usually_get_enough_good_quality_sleep"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@color/black"/>
                </RadioGroup>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView 2 -->
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_02_do_you_exercise_regularly"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes1"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:layout_width="81dp"
                        android:layout_height="wrap_content"
                        android:text="@string/no1"
                        android:textColor="@color/black" />
                </RadioGroup>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView 3 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_03_do_you_manage_stress_effectively"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes2"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no2"
                        android:textColor="@color/black"/>
                </RadioGroup>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView 4 -->
        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_04_do_you_maintain_a_healthy_diet"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes3"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no3"
                        android:textColor="@color/black"/>
                </RadioGroup>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView 5 -->
        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_05_do_you_take_time_to_relax_and_unwind"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes22"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no22"
                        android:textColor="@color/black"/>
                </RadioGroup>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button5"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
