<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleText"
            android:paddingBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aromas_for_mind_relaxation"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/aromaText"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/_1_lavender_neffects_reduces_stress_anxiety_and_promotes_deep_sleep_nideal_for_meditation_bedtime_and_relaxation_nused_in_diffusers_bath_oils_pillow_sprays_n_n"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/aromaText2"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/_2_chamomile_neffects_calms_the_mind_reduces_nervous_tension_and_improves_mood_n_ideal_for_anxiety_relief_stress_management_and_relaxation_n_also_used_in_chamomile_tea_for_relaxation_n_n"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/aromaText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/aromaText3"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/_3_sandalwood_neffects_helps_in_deep_meditation_reduces_restlessness_and_enhances_focus_nideal_for_yoga_prayer_and_deep_relaxation_noften_used_in_incense_sticks_and_essential_oils_n_n"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/aromaText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/aromaText4"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/_4_rose_neffects_uplifts_mood_reduces_depression_and_creates_a_calming_effect_nideal_for_stress_relief_self_care_and_emotional_healing_nused_in_perfumes_diffusers_and_bath_products_n_n"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/aromaText3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/aromaText5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_5_jasmine_neffects_relieves_tension_promotes_relaxation_and_helps_with_sleep_nideal_for_evening_relaxation_and_romance_nused_in_essential_oils_and_room_fresheners_n_n"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/aromaText4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/aromaText6"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/_6_ylang_ylang_neffects_lowers_blood_pressure_reduces_anxiety_and_enhances_mood_nideal_for_deep_relaxation_and_meditation_noften_blended_with_other_oils_for_a_calming_effect"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/aromaText5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
