<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".meditation">

    <!-- Title Text -->


    <!-- Subtitle -->

    <!-- First Row: 3 Buttons -->

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Meditation Library"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="12dp"

        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/relaxation_and_anxiety_relief"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <TextView
        android:id="@+id/subtitleText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:text="@string/sleep_meditation"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/videor"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"/>

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:srcCompat="@drawable/videor" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:srcCompat="@drawable/videor" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:srcCompat="@drawable/videor" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:srcCompat="@drawable/videor" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:srcCompat="@drawable/videor" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@id/imageButton3"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toEndOf="@id/imageButton1"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:srcCompat="@drawable/videor" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/videor"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"/>

    <!-- First Row Text -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_1"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imageButton1"
        app:layout_constraintStart_toStartOf="@id/imageButton1"
        app:layout_constraintEnd_toEndOf="@id/imageButton1"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_2"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imageButton2"
        app:layout_constraintStart_toStartOf="@id/imageButton2"
        app:layout_constraintEnd_toEndOf="@id/imageButton2"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_3"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imageButton3"
        app:layout_constraintStart_toStartOf="@id/imageButton3"
        app:layout_constraintEnd_toEndOf="@id/imageButton3"
        android:layout_marginTop="5dp"/>

    <!-- Second Row: 3 Buttons -->
    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/videor"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"/>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@id/imageButton6"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toEndOf="@id/imageButton4"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:srcCompat="@drawable/videor" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/videor"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"/>

    <!-- Second Row Text -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_4"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imageButton4"
        app:layout_constraintStart_toStartOf="@id/imageButton4"
        app:layout_constraintEnd_toEndOf="@id/imageButton4"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/step_11"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/imageButton4"
        app:layout_constraintStart_toStartOf="@id/imageButton4"
        app:layout_constraintTop_toBottomOf="@id/imageButton4" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/step_41"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/imageButton4"
        app:layout_constraintStart_toStartOf="@id/imageButton4"
        app:layout_constraintTop_toBottomOf="@id/imageButton4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_5"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imageButton5"
        app:layout_constraintStart_toStartOf="@id/imageButton5"
        app:layout_constraintEnd_toEndOf="@id/imageButton5"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/step_22"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/imageButton5"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="@id/imageButton5"
        app:layout_constraintTop_toBottomOf="@id/imageButton5" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/step_51"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/imageButton5"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="@id/imageButton5"
        app:layout_constraintTop_toBottomOf="@id/imageButton5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_6"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imageButton6"
        app:layout_constraintStart_toStartOf="@id/imageButton6"
        app:layout_constraintEnd_toEndOf="@id/imageButton6"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/step_31"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/imageButton6"
        app:layout_constraintStart_toStartOf="@id/imageButton6"
        app:layout_constraintTop_toBottomOf="@id/imageButton6" />

</androidx.constraintlayout.widget.ConstraintLayout>
